Development
    Add gl2 to the list of possible vo's, my ATI r6xx works well with it, but not gl
    Change samplerate display from KB/s to KHz
0.9.7
    Make sure mouse pointer disappears when over the window and not moving, mplayer didn't always do it.
    Fix menu button not showing when starting with dvdnav://
    Fix up/down arrow buttons in playlist view, items were moving by play order was not set right
    Updated Polish translation
    Fix condition where in replace and play mode the content is updated rapidly and the app crashes
    Clean up code with 'make indent'
    Update po files
    Ensure that window is resized prior to launching the thread
    Add on metadata loader change from length to demuxer to determine if metadata is loaded
    Don't hang if non-media files are in the playlist, like album art
    Correct display problem where video says it is one size, but plays at another
    Correct details content
    Fix Details display, however, content is wrong
    Make the adjust layout code run in the event queue, rather than direct. However, this breaks details display
    Don't process keys while over the playlist
    Now that metadata loading is async, metadata is usually wrong for first item, so wait until it is available 
        for the playing item, availability is based on "not streaming and length > 0"
    Allow accelerator keys that are not just letters to work when cursor is over the playlist
        Allows typeahead to work, but also allows keys like F9 to work
    Revert pane layout, caused too many issues
    Rework pane layout, now give more space to the playlist than the video, works better for audio
    Fix some user interface issues with the new randomization method
    Remove the need for the nonrandomplaylist, should reduce memory requirements
        Random playback is a little different now, the items in the playlist don't shift
    Add config option to enable passthru of AC3/DTS content to s/pdif over alsa (disables audiometer)